<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Background Image -->
        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_detail"
            android:src="@drawable/asparagus_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/vegetables_name"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_background"
            android:src="@drawable/asparagus" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_background"
            tools:text="Asparagus" />

        <ImageView
            android:id="@+id/fav_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/data_nutrition"
            android:src="@drawable/unstar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toEndOf="@+id/tv_item_name"
            app:layout_constraintTop_toTopOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_nutrition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/data_nutrition"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/img_item_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/tv_item_benefits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/data_benefits"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_nutrition"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nutrition"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nutrition" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_benefits"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_benefits" />

        <TextView
            android:id="@+id/tv_description_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/desc_detail"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_benefits"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
