<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="97dp"
            android:layout_height="102dp"
            android:contentDescription="@string/vegetables_name"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/asparagus" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/img_item_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@id/img_item_photo"
            tools:text="@string/vegetables_name" />

        <TextView
            android:id="@+id/tv_item_nutrition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
            android:text="@string/data_nutrition"/>

        <TextView
            android:id="@+id/tv_item_benefits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ellipsize="end"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_nutrition"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_nutrition"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_nutrition"
            android:text="@string/data_benefits"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
